fix color title h1

--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -440,7 +440,7 @@ body {
 .title {
   text-transform: uppercase;
   font-weight: bold;
-  color: #fff;
+  /*color: #fff;*/
   font-size: 23px;
   border-bottom: 1px solid #bbb;
   text-align: center;
